@@ -22,4 +22,5 @@ I want the version to be bigger than 1.2.4 so that it never looks like a downgra
   - When you open another note then go back to the previous one, the backlinks buffer now remembers where your cursor was.
   - Link context is also saved and displayed
 - Merge org-roam-bibtex 0.4 ([[https://github.com/org-roam/org-roam-bibtex/commit/5236917e1d8a4f88daadacc690248854f53facb4][5236917]]) in here
+  - Don't format field values in APA style
 - Support plain strings in =ROAM_KEY= like ~#+roam_key: miman2017~
